Did some changing.

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MONGODB_URI=mongodb+srv://animeshacharya867:HSGVGsSiGgE7Egx6@cluster0.fg8yk7e.mo
 NEXTAUTH_SECRET=fd6923f4cc570c418d7218a88f57ea2a
 
 NEXTAUTH_URL=http://localhost:3000
+
+PUBLIC_URL= http://localhost:3000
